# DataAwareZSim

./: .gitignore  CMakeLists.txt
src/: BDICompressedCache.cpp  BDICompressedCache.h  BDICompressedCacheArray.cpp  BDICompressedCacheArray.h  BDILRUReplPolicy.cpp  BDILRUReplPolicy.h  Callback.h  DRAMSim.h  access_tracing.cpp  access_tracing.h  barrier.h  bithacks.h  breakdown_stats.h  cache.cpp  cache.h  cache_arrays.cpp  cache_arrays.h  coherence_ctrls.cpp  coherence_ctrls.h  config.cpp  config.h  contention_sim.cpp  contention_sim.h  core.h  core_recorder.cpp  core_recorder.h  cpuenum.h  cpuid.h  ddr_mem.cpp  ddr_mem.h  debug.h  debug_harness.cpp  debug_harness.h  debug_zsim.cpp  debug_zsim.h  decoder.cpp  decoder.h  detailed_mem.cpp  detailed_mem.h  detailed_mem_params.cpp  (+91 more)
src/g_heap/: dlmalloc.h.c
src/g_std/: g_list.h  g_multimap.h  g_string.h  g_unordered_map.h  g_unordered_set.h  g_vector.h  stl_galloc.h
src/virt/: common.h  cpu.cpp  fs.cpp  patchdefs.h  port_virtualizer.h  ports.cpp  syscall_name.cpp.in  syscall_name.h  time.cpp  time_conv.h  timeout.cpp  virt.cpp  virt.h
tests/farid/: a.cpp  farid.cfg  heartbeat  out.cfg  zsim-cmp.h5  zsim-ev.h5  zsim.h5
tests/mult-parsec/blackscholes/: baseline.cfg  myconf.cfg
tests/mult-parsec/bodytrack/: baseline.cfg  myconf.cfg
tests/mult-parsec/canneal/: baseline.cfg  myconf.cfg
tests/mult-parsec/dedup/: baseline.cfg  myconf.cfg
tests/mult-parsec/facesim/: baseline.cfg  myconf.cfg
tests/mult-parsec/ferret/: baseline.cfg  myconf.cfg
tests/mult-parsec/fluidanimate/: baseline.cfg  myconf.cfg
(+12 files in other folders)
